--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./src/css/responsivo.css">
 </head>
 
-<body>
+<body></body>
     <main>
         <div class="carrossel">
             <img class="imagem ativa" src="./src/imagens/Blackclover.jpeg" alt="Black Clover">
